--- a/style.css
+++ b/style.css
@@ -430,7 +430,17 @@ footer .card {
     max-width: 100%;
     margin-left: 60px;
 }
-
+.copyrights h1 {
+    text-align: center;
+    font-size: 0.813rem;
+    color: var(--secondary-color);
+    font-weight: 300;
+}
+.copyrights {
+    padding: 10px 0;
+    background-color: #000E89;
+    border-top: 1px solid rgba(255,255,255,0.2);
+}
 
 
 
