--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ nav {
     height: 100vh;
     background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(images/image\ 1.png);
     background-position: center;
+    background-repeat: no-repeat;
 }
 .headings img {
     width: 80.75rem;
@@ -264,7 +265,7 @@ nav {
 }
 
 .memberss {
-    /* height: 100vh; */
+    height: 100vh;
     width: 100%;
     background-color: var(--primary-color);  
     padding: 50px 0;  
@@ -316,6 +317,7 @@ nav {
     flex-wrap: wrap;
     padding: 40px 20px;
     max-width: 100%;
+    max-height: 100%;
     margin-top: 30px;
 }
 .mem-container .images {
