--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ nav {
 
 .events {
     width: 100%;
-    /* height: 100vh; */
+    height: 100vh;
     background-image: url(images/image\ 2.png);
     background-repeat: no-repeat;
     background-color: var(--primary-color);
