--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ nav {
     background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(images/image\ 1.png);
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 .headings img {
     width: 80.75rem;
@@ -177,7 +178,7 @@ nav {
 
 .events {
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     background-image: url(images/image\ 2.png);
     background-repeat: no-repeat;
     background-color: var(--primary-color);
