--- a/style.css
+++ b/style.css
@@ -266,8 +266,8 @@ nav {
 }
 
 .memberss {
-    height: 100vh;
-    width: 100%;
+    /* height: 100vh; */
+    max-width: 100%;
     background-color: var(--primary-color);  
     padding: 50px 0;  
 }
