modified mq again HAHA

--- a/style.css
+++ b/style.css
@@ -465,7 +465,7 @@ footer .card {
 
 /* Mobile Responsiveness */
 
-@media only screen and (min-width: 600px) {
+@media only screen and (max-width: 600px) {
     nav {
         padding: 0;
         display: flex;
